--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Fitting football models and visualizing predictions with the `footBayes` package"
 author: "Leonardo Egidi, Roberto Macrì Demartino, and Vasilis Palaskas"
-date: "2025-05-15"
+date: "2025-06-02"
 output:
   rmarkdown::html_vignette:
     toc: yes
@@ -431,15 +431,15 @@ print(fit_result_dyn,
 #> # A tibble: 9 × 10
 #>   variable                   mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
 #>   <chr>                     <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 logStrength[1, AC Milan]  2.16   2.15  0.882 0.874  0.783 3.66   1.01     280.     852.
-#> 2 logStrength[2, AC Milan]  1.40   1.40  0.993 1.03  -0.212 3.05   1.01     174.     435.
-#> 3 logStrength[3, AC Milan]  2.43   2.44  1.16  1.18   0.437 4.33   1.03     134.     309.
-#> 4 logStrength[4, AC Milan]  2.91   2.86  1.35  1.40   0.766 5.14   1.03     131.     310.
-#> 5 logStrength[1, AS Roma]   1.48   1.49  0.839 0.831  0.068 2.84   1.00     261.     862.
-#> 6 logStrength[2, AS Roma]   0.018  0.011 0.972 0.956 -1.56  1.63   1.01     161.     364.
-#> 7 logStrength[3, AS Roma]   0.939  0.956 1.11  1.13  -0.939 2.74   1.03     123.     281.
-#> 8 logStrength[4, AS Roma]   1.1    1.04  1.29  1.33  -0.936 3.25   1.03     122.     318.
-#> 9 logTie                   -0.008 -0.009 0.087 0.087 -0.148 0.133  1.00    1230.    1339.
+#> 1 logStrength[1, AC Milan]  2.20   2.17  0.951 0.916  0.632 3.82   1.00     528.     927.
+#> 2 logStrength[2, AC Milan]  1.45   1.43  1.10  1.12  -0.381 3.22   1.00     268.     439.
+#> 3 logStrength[3, AC Milan]  2.47   2.47  1.27  1.32   0.495 4.59   1.01     140.     329.
+#> 4 logStrength[4, AC Milan]  2.97   2.92  1.43  1.49   0.726 5.37   1.01     147.     365.
+#> 5 logStrength[1, AS Roma]   1.51   1.50  0.94  0.964 -0.001 3.01   1.00     495.     757.
+#> 6 logStrength[2, AS Roma]   0.046  0.055 1.06  1.09  -1.66  1.82   1.00     255.     518.
+#> 7 logStrength[3, AS Roma]   0.943  0.936 1.22  1.25  -1.08  2.99   1.01     147.     244.
+#> 8 logStrength[4, AS Roma]   1.16   1.17  1.36  1.37  -1.07  3.41   1.00     128.     192.
+#> 9 logTie                   -0.007 -0.006 0.083 0.084 -0.147 0.129  1.00    1831.    1617.
 ```
 
 
@@ -467,24 +467,24 @@ print(fit_result_stat,
 #> 
 #> Top teams based on relative log-strengths:
 #>    periods            team log_strengths
-#> 11       1           Inter        2.2973
-#> 7        1        AC Milan        2.0472
-#> 13       1      SSC Napoli        1.7988
-#> 6        1        Juventus        1.5070
-#> 20       1        Atalanta        1.2301
-#> 19       1      Lazio Roma        1.0167
-#> 15       1         AS Roma        0.9186
-#> 5        1 Sassuolo Calcio        0.5942
-#> 1        1  ACF Fiorentina        0.1174
-#> 2        1   Hellas Verona        0.0565
+#> 11       1           Inter        2.2320
+#> 7        1        AC Milan        1.7867
+#> 13       1      SSC Napoli        1.4410
+#> 6        1        Juventus        1.2856
+#> 20       1        Atalanta        0.9298
+#> 19       1      Lazio Roma        0.6326
+#> 15       1         AS Roma        0.5213
+#> 5        1 Sassuolo Calcio        0.3334
+#> 2        1   Hellas Verona       -0.0814
+#> 1        1  ACF Fiorentina       -0.1084
 #> 
 #> Posterior summaries for model parameters:
 #> # A tibble: 3 × 10
 #>   variable                mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
 #>   <chr>                  <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 logStrength[AC Milan]  1.92   1.95  0.729 0.735  0.714 3.12   1.02    109.      263.
-#> 2 logStrength[AS Roma]   0.735  0.765 0.706 0.699 -0.442 1.91   1.02     95.6     221.
-#> 3 logTie                -0.117 -0.116 0.087 0.087 -0.26  0.023  1.00   1229.     1265.
+#> 1 logStrength[AC Milan]  1.84   1.83  0.718 0.692  0.661 3.10   1.02     94.9     225.
+#> 2 logStrength[AS Roma]   0.662  0.633 0.704 0.693 -0.461 1.87   1.02     90.3     240.
+#> 3 logTie                -0.118 -0.117 0.086 0.088 -0.256 0.022  1       820.     1128.
 ```
 
 Another significant feature implemented in the ```btd_foot``` function is the ability to account for the **home-field effect**. This effect represents the psychological or logistical benefits that the home team may have over the visiting team. This is modeled as a multiplicative order effect <span style="color:red"> @davidson_beaver_1977</span> in the Bayesian BTD framework. This multiplicative parameter becomes in the
@@ -543,8 +543,8 @@ print(fit_result_dyn_2,
 #> # A tibble: 2 × 10
 #>   variable  mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
 #>   <chr>    <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 logTie   0.025  0.028 0.093 0.092 -0.129 0.177  1.00    2076.    1335.
-#> 2 home     0.229  0.228 0.111 0.114  0.043 0.411  1       2434.    1115.
+#> 1 logTie   0.021  0.024 0.091 0.089 -0.126 0.171  1.00    2619.    1301.
+#> 2 home     0.232  0.233 0.111 0.108  0.058 0.414  1.00    2461.    1439.
 ```
 
 
@@ -577,23 +577,23 @@ print(fit_result_stat_2,
 #> 
 #> Top teams based on relative log-strengths:
 #>    periods            team log_strengths
-#> 11       1           Inter          4.14
-#> 7        1        AC Milan          3.67
-#> 13       1      SSC Napoli          3.17
-#> 6        1        Juventus          3.13
-#> 20       1        Atalanta          2.56
-#> 15       1         AS Roma          2.42
-#> 19       1      Lazio Roma          2.27
-#> 5        1 Sassuolo Calcio          1.83
-#> 1        1  ACF Fiorentina          1.64
-#> 8        1       Torino FC          1.42
+#> 11       1           Inter          3.45
+#> 7        1        AC Milan          2.96
+#> 13       1      SSC Napoli          2.57
+#> 6        1        Juventus          2.49
+#> 20       1        Atalanta          2.24
+#> 19       1      Lazio Roma          2.04
+#> 15       1         AS Roma          1.79
+#> 5        1 Sassuolo Calcio          1.48
+#> 1        1  ACF Fiorentina          1.11
+#> 2        1   Hellas Verona          1.06
 #> 
 #> Posterior summaries for model parameters:
 #> # A tibble: 2 × 10
 #>   variable   mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
 #>   <chr>     <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 logTie   -0.114 -0.114 0.09  0.09  -0.256 0.039  1.00     405.     458.
-#> 2 home      0.205  0.203 0.102 0.102  0.034 0.37   1.00     335.     366.
+#> 1 logTie   -0.123 -0.124 0.087 0.092 -0.259 0.021  1.00     534.     835.
+#> 2 home      0.204  0.204 0.097 0.098  0.047 0.363  1.00     422.     624.
 ```
 
 The `btd_foot` function offers flexibility in how the posterior distributions are obtained by allowing users to choose the estimation method via the `method` argument. This argument enables the user to balance computational efficiency with the precision of uncertainty estimates. The available options include:
@@ -746,7 +746,7 @@ To start with some analysis, let's now ```italy```  data about the Italian Serie
 
 - The likelihood approach: the ```mle_foot``` function returns the MLE estimates along with 95\% profile-likelihood deviance confidence intervals (by default) and Wald-type confidence intervals. The user can specify the desired confidence interval with the optional argument ```interval = c("profile", "Wald")```.
 
-- The Bayesian approach: the ```stan_foot``` function produces an Hamiltonian Monte Carlo posterior sampling by using the underlying ```rstan``` ecosystem. The user can choose the number of iterations (```iter```), the number of Markov chains (```chains```), and other optional arguments values. The output is an object of class ```stanFoot```.
+- The Bayesian approach: the ```stan_foot``` function produces posterior sampling by using the underlying ```cmdstan``` ecosystem. The user can choose the number of iterations (```iter_sampling```), the number of Markov chains (```chains```), and other optional arguments values. The output is an object of class ```stanFoot```.
 
 At this stage, we are currently ignoring any time-dependence in our parameters, considering them to be **static** across distinct match-times.
 
@@ -809,14 +809,14 @@ print(fit1_stan,
 #> # A tibble: 8 × 10
 #>   variable        mean median    sd   mad     q5    q95  rhat ess_bulk ess_tail
 #>   <chr>          <dbl>  <dbl> <dbl> <dbl>  <dbl>  <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home           0.283  0.287 0.067 0.064  0.164  0.386  1.00     809.    579. 
-#> 2 rho           -1.75  -1.71  0.314 0.301 -2.34  -1.32   1.01     683.    380. 
-#> 3 sigma_att      0.207  0.201 0.065 0.061  0.108  0.318  1.02     240.    296. 
-#> 4 sigma_def      0.223  0.218 0.072 0.067  0.116  0.348  1.03     167.     72.9
-#> 5 att[AS Roma]   0.262  0.266 0.134 0.141  0.03   0.478  1.01     541.    558. 
-#> 6 att[AC Milan]  0.131  0.129 0.116 0.114 -0.042  0.327  1.01     844.    422. 
-#> 7 def[AS Roma]  -0.2   -0.187 0.147 0.14  -0.454  0.018  1.01     693.    303. 
-#> 8 def[AC Milan]  0      0.004 0.139 0.137 -0.239  0.227  1.00    1486.    633.
+#> 1 home           0.287  0.291 0.07  0.067  0.173  0.395  1.00     777.     565.
+#> 2 rho           -1.79  -1.75  0.366 0.313 -2.43  -1.29   1.00     615.     363.
+#> 3 sigma_att      0.213  0.204 0.066 0.064  0.118  0.337  1.01     232.     334.
+#> 4 sigma_def      0.223  0.216 0.071 0.064  0.12   0.352  1.00     391.     302.
+#> 5 att[AS Roma]   0.272  0.272 0.129 0.132  0.064  0.486  1.00     710.     642.
+#> 6 att[AC Milan]  0.135  0.133 0.128 0.125 -0.083  0.345  1.01     952.     581.
+#> 7 def[AS Roma]  -0.205 -0.185 0.157 0.152 -0.463  0.034  1.01     965.     558.
+#> 8 def[AC Milan]  0.001  0.007 0.123 0.123 -0.203  0.201  1.01    1105.     540.
 ```
 
 The **Gelman-Rubin statistic** $\hat{R}$ (```Rhat```) is below the threshold 1.1 for all the parameters, whereas the **effective sample size** (```n_eff```), measuring the approximate number of iid replications from the Markov chains, does not appear to be problematic. Thus, HMC sampling reached the convergence.
@@ -1213,10 +1213,10 @@ print(fit2_stan, pars = c(
 #> # A tibble: 4 × 10
 #>   variable    mean median    sd   mad     q5    q95  rhat ess_bulk ess_tail
 #>   <chr>      <dbl>  <dbl> <dbl> <dbl>  <dbl>  <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home       0.28   0.286 0.069 0.072  0.168  0.387  1.00   521.      285. 
-#> 2 rho       -1.76  -1.71  0.367 0.301 -2.39  -1.30   1.00   460.      251. 
-#> 3 sigma_att  0.048  0.047 0.009 0.007  0.035  0.066  1.22     7.20     11.4
-#> 4 sigma_def  0.058  0.056 0.012 0.012  0.042  0.08   1.30     5.56     24.1
+#> 1 home       0.279  0.28  0.069 0.069  0.162  0.385  1.00   378.      405. 
+#> 2 rho       -1.77  -1.73  0.35  0.327 -2.42  -1.25   1.00   325.      246. 
+#> 3 sigma_att  0.045  0.047 0.01  0.009  0.023  0.059  1.62     3.43     12.1
+#> 4 sigma_def  0.054  0.055 0.01  0.012  0.038  0.072  1.66     3.38     12.8
 ```
 
 From the printed summary, we may note that the degree of goals' correlation seems to be again very small here. Moreover, the Gelman-Rubin statistic for $\sigma_{\text{att}}$ is relatively high, whereas the effective sample sizes for $\sigma_{\text{att}}$ and $\sigma_{\text{def}}$ are quite low. This is suggesting possible inefficiencies during the HMC sampling and that a *model-reparametrization* could be suited and effective at this stage.  Another option is to play a bit with the prior specification for $\sigma_{\text{att}}$ and $\sigma_{\text{def}}$, for instance by specifying a prior inducing less shrinkage in the team-specific abilities.
@@ -1252,9 +1252,9 @@ print(fit3_stan, pars = c(
 #> # A tibble: 3 × 10
 #>   variable   mean median    sd   mad    q5   q95  rhat ess_bulk ess_tail
 #>   <chr>     <dbl>  <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home      0.407  0.408 0.052 0.056 0.32  0.494  1.01   412.      231. 
-#> 2 sigma_att 0.049  0.046 0.014 0.015 0.032 0.075  1.85     3.04     36.9
-#> 3 sigma_def 0.053  0.05  0.011 0.011 0.039 0.074  1.31     7.03     19.3
+#> 1 home      0.409  0.409 0.046 0.048 0.337 0.481  1      489.      245. 
+#> 2 sigma_att 0.047  0.051 0.013 0.013 0.025 0.065  1.66     3.34     41.0
+#> 3 sigma_def 0.051  0.05  0.01  0.01  0.036 0.07   1.34     5.37     21.5
 ```
 
 
@@ -1300,9 +1300,9 @@ print(fit3_stan_t, pars = c(
 #> # A tibble: 3 × 10
 #>   variable   mean median    sd   mad    q5   q95  rhat ess_bulk ess_tail
 #>   <chr>     <dbl>  <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home      0.41   0.411 0.043 0.041 0.333 0.48   1.03   131.      208. 
-#> 2 sigma_att 0.033  0.032 0.008 0.009 0.022 0.046  1.47     3.98     53.3
-#> 3 sigma_def 0.037  0.04  0.015 0.019 0.014 0.06   2.10     2.77     22.4
+#> 1 home      0.41   0.409 0.047 0.051 0.339 0.494  1.04   122.      258. 
+#> 2 sigma_att 0.03   0.029 0.007 0.006 0.019 0.044  1.46     4.04     26.6
+#> 3 sigma_def 0.049  0.049 0.013 0.014 0.032 0.072  1.56     3.88     17.8
 ```
 
 As we may conclude, the situation has been only slightly improved.
@@ -1412,10 +1412,10 @@ print(fit_stan_rank,
 #> # A tibble: 4 × 10
 #>   variable    mean median    sd   mad     q5    q95  rhat ess_bulk ess_tail
 #>   <chr>      <dbl>  <dbl> <dbl> <dbl>  <dbl>  <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home       0.159  0.159 0.068 0.064  0.047  0.272  1      2342.    1669. 
-#> 2 rho       -1.10  -1.09  0.162 0.163 -1.38  -0.849  1      2388.    1576. 
-#> 3 sigma_att  0.025  0.02  0.02  0.015  0.004  0.064  1.06     16.1     42.5
-#> 4 sigma_def  0.03   0.026 0.02  0.022  0.005  0.066  1.18     12.9     44.1
+#> 1 home       0.158  0.16  0.068 0.065  0.043  0.265  1      2026.    1410. 
+#> 2 rho       -1.09  -1.09  0.161 0.162 -1.36  -0.844  1.00   1496.    1283. 
+#> 3 sigma_att  0.035  0.032 0.022 0.02   0.008  0.07   1.07     24.9     34.6
+#> 4 sigma_def  0.034  0.031 0.024 0.025  0.005  0.078  1.08     17.6     54.5
 ```
 
 
@@ -1493,12 +1493,12 @@ pp_foot(
 #> 
 #> $pp_table
 #>   goal diff. Bayesian p-value
-#> 1         -3            0.326
-#> 2         -2            0.870
+#> 1         -3            0.304
+#> 2         -2            0.856
 #> 3         -1            0.988
-#> 4          0            0.041
-#> 5          1            0.265
-#> 6          2            0.109
+#> 4          0            0.045
+#> 5          1            0.252
+#> 6          2            0.085
 #> 7          3            0.924
 
 pp_foot(
@@ -1598,7 +1598,7 @@ foot_prob(
 )
 #> $prob_table
 #>        home_team away_team prob_h prob_d prob_a         mlo
-#> 1 Reggina Calcio  AC Milan  0.323  0.248   0.43 1-1 (0.101)
+#> 1 Reggina Calcio  AC Milan  0.371  0.258  0.371 1-1 (0.111)
 #> 
 #> $prob_plot
 ```
@@ -1632,42 +1632,42 @@ where $(\tilde{x}^{(s)}, \tilde{y}^{(s)})$ represents the $s$-th MCMC pair of th
 foot_round_robin(object = fit4_stan, data = italy_2000)
 #> $round_table
 #>              Home           Away Home_prob Observed
-#> 1   Hellas Verona     Bologna FC     0.338        -
-#> 2           Inter     Bologna FC     0.438        -
-#> 3  Udinese Calcio     SSC Napoli     0.495        -
-#> 4  ACF Fiorentina     SSC Napoli     0.535        -
-#> 5        US Lecce     Lazio Roma     0.235        -
-#> 6           Inter     Lazio Roma     0.295        -
-#> 7  Brescia Calcio        AS Bari     0.627        -
-#> 8  Reggina Calcio        AS Bari     0.590        -
-#> 9  Udinese Calcio Vicenza Calcio     0.392        -
-#> 10 Brescia Calcio Vicenza Calcio     0.510        -
-#> 11        AS Roma       Parma AC     0.392        -
-#> 12       US Lecce       Parma AC     0.220        -
-#> 13        AS Roma       AC Milan     0.510        -
-#> 14 Reggina Calcio       AC Milan     0.318        -
-#> 15  Hellas Verona     AC Perugia     0.365        -
-#> 16       Juventus     AC Perugia     0.568        -
-#> 17 ACF Fiorentina       Atalanta     0.425        -
-#> 18       Juventus       Atalanta     0.527        -
-#> 19     SSC Napoli        AS Roma     0.230        -
-#> 20        AS Bari        AS Roma     0.255        -
-#> 21     Lazio Roma Udinese Calcio     0.728        -
+#> 1   Hellas Verona     Bologna FC     0.340        -
+#> 2           Inter     Bologna FC     0.470        -
+#> 3  Udinese Calcio     SSC Napoli     0.482        -
+#> 4  ACF Fiorentina     SSC Napoli     0.540        -
+#> 5        US Lecce     Lazio Roma     0.230        -
+#> 6           Inter     Lazio Roma     0.350        -
+#> 7  Brescia Calcio        AS Bari     0.635        -
+#> 8  Reggina Calcio        AS Bari     0.610        -
+#> 9  Udinese Calcio Vicenza Calcio     0.378        -
+#> 10 Brescia Calcio Vicenza Calcio     0.532        -
+#> 11        AS Roma       Parma AC     0.395        -
+#> 12       US Lecce       Parma AC     0.270        -
+#> 13        AS Roma       AC Milan     0.478        -
+#> 14 Reggina Calcio       AC Milan     0.392        -
+#> 15  Hellas Verona     AC Perugia     0.390        -
+#> 16       Juventus     AC Perugia     0.623        -
+#> 17 ACF Fiorentina       Atalanta     0.465        -
+#> 18       Juventus       Atalanta     0.537        -
+#> 19     SSC Napoli        AS Roma     0.238        -
+#> 20        AS Bari        AS Roma     0.240        -
+#> 21     Lazio Roma Udinese Calcio     0.710        -
 #> 22       Atalanta Udinese Calcio     0.555        -
-#> 23     Bologna FC       US Lecce     0.557        -
-#> 24 Vicenza Calcio       US Lecce     0.530        -
-#> 25       AC Milan Brescia Calcio     0.510        -
-#> 26     AC Perugia Brescia Calcio     0.390        -
-#> 27     SSC Napoli  Hellas Verona     0.488        -
-#> 28       Parma AC  Hellas Verona     0.640        -
-#> 29     AC Perugia Reggina Calcio     0.525        -
-#> 30       Atalanta Reggina Calcio     0.438        -
-#> 31     Lazio Roma ACF Fiorentina     0.637        -
-#> 32       AC Milan ACF Fiorentina     0.632        -
-#> 33     Bologna FC       Juventus     0.320        -
-#> 34 Vicenza Calcio       Juventus     0.275        -
-#> 35        AS Bari          Inter     0.288        -
-#> 36       Parma AC          Inter     0.620        -
+#> 23     Bologna FC       US Lecce     0.520        -
+#> 24 Vicenza Calcio       US Lecce     0.550        -
+#> 25       AC Milan Brescia Calcio     0.517        -
+#> 26     AC Perugia Brescia Calcio     0.405        -
+#> 27     SSC Napoli  Hellas Verona     0.420        -
+#> 28       Parma AC  Hellas Verona     0.632        -
+#> 29     AC Perugia Reggina Calcio     0.522        -
+#> 30       Atalanta Reggina Calcio     0.470        -
+#> 31     Lazio Roma ACF Fiorentina     0.632        -
+#> 32       AC Milan ACF Fiorentina     0.600        -
+#> 33     Bologna FC       Juventus     0.310        -
+#> 34 Vicenza Calcio       Juventus     0.312        -
+#> 35        AS Bari          Inter     0.308        -
+#> 36       Parma AC          Inter     0.588        -
 #> 
 #> $round_plot
 ```
@@ -1770,7 +1770,7 @@ foot_rank(
 
 ## Comparing Football Prediction Models using ```compare_foot```
 
-Evaluating the performance of these models is crucial to understand their predictive power and reliability. The ```compare_foot``` function provides a comprehensive way to compare different models or probability matrices using metrics like accuracy, Brier score, ranked probability score (RPS), Pseudo $R^2$, and average coverage probability (ACP). It also offers the option to compute confusion matrices for a detailed performance analysis.
+Evaluating the performance of these models is crucial to understand their predictive power and reliability. The ```compare_foot``` function provides a comprehensive way to compare different models or probability matrices using metrics like accuracy, Brier score, ranked probability score (RPS), Pseudo $R^2$, and average of correct probabilities (ACP). It also offers the option to compute confusion matrices for a detailed performance analysis.
 
 
 ``` r
@@ -1844,25 +1844,25 @@ compare_results_models <- compare_foot(
 print(compare_results_models, digits = 3)
 #> Predictive Performance Metrics
 #>        Model   RPS accuracy brier pseudoR2   ACP
-#>     biv_pois 0.255    0.353 0.716    0.311 0.350
-#>  double_pois 0.256    0.368 0.715    0.309 0.361
+#>     biv_pois 0.253    0.347 0.713    0.313 0.350
+#>  double_pois 0.257    0.374 0.719    0.306 0.360
 #> 
 #> Confusion Matrices
 #> Model: biv_pois 
 #> 
 #>           Actual
 #> Predicted  Home Win Draw Away Win
-#>   Home Win       51   28       32
+#>   Home Win       50   26       32
 #>   Draw            0    0        0
-#>   Away Win       38   25       16
+#>   Away Win       39   27       16
 #> 
 #> Model: double_pois 
 #> 
 #>           Actual
 #> Predicted  Home Win Draw Away Win
-#>   Home Win       57   33       35
+#>   Home Win       58   33       35
 #>   Draw            0    0        0
-#>   Away Win       32   20       13
+#>   Away Win       31   20       13
 ```
 
 
@@ -1909,9 +1909,9 @@ loo_compare(loo1, loo1_t, loo2, loo3, loo3_t)
 #>        elpd_diff se_diff
 #> model1  0.0       0.0   
 #> model2 -0.6       0.4   
-#> model3 -1.2       2.5   
-#> model4 -5.7       4.0   
-#> model5 -6.4       4.1
+#> model3 -2.2       2.4   
+#> model4 -5.9       4.0   
+#> model5 -6.6       4.2
 ```
 
 According to the above model LOOIC comparisons, the weekly-dynamic double Poisson models  attain the lowest LOOIC values and are then the favored models in terms of predictive accuracy. The static model's ```fit1_stan``` final looic is suggesting that the assumption of static team-specific parameters is too restrictive and oversimplified to capture teams' skills over time and make reliable predictions. Anyway, from model checking we have the suggestion that even the static model has a reliable goodness of fit and could be used for some simplified analysis not requiring complex dynamic patterns.
